--- a/examples/vue/package.json
+++ b/examples/vue/package.json
@@ -2,12 +2,14 @@
   "name": "vue",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "dn test && dn build -e prod"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "alfred",
+  "license": "MIT",
+  "devDependencies": {
+  },
   "dependencies": {
     "vue": "^2.5.17"
   }
