--- a/examples/vue/package.json
+++ b/examples/vue/package.json
@@ -9,6 +9,7 @@
   "author": "alfred",
   "license": "MIT",
   "devDependencies": {
+    "dn-middleware-webpack": "^1.10.0"
   },
   "dependencies": {
     "vue": "^2.5.17"
